# rosettascript.github.io

./: .gitattributes  .gitignore  CANONICAL_FIX_SUMMARY.md  FAQ_DRAFT_OPTIMIZED.md  LICENSE  README.md  REDIRECT_FIX_SUMMARY.md  SEO_FIXES_REPORT.md  TEST_LOCAL.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
api/: README.md  scrape.ts
author/: author-cv.md
public/: 404.html  manifest.json  robots.txt  sitemap.xml
public/cpp-wasm/pkg/: ruc_wasm.wasm
public/random-universe-cipher/: index.html  theme-override.css
public/random-universe-cipher/assets/: crypto-worker-Cr3k82Nz.js  crypto-worker-Cr3k82Nz.js.map  index-CHdsNm_x.js  index-DR4xltMW.css  (+1 more)
public/wasm/: ruc_wasm_bg.wasm
scripts/: check-all-seo.js  check-content-match.js  check-seo-requirements.js  enhance-html-for-bots.js  generate-rss.js  generate-sitemap.js  generate-static-routes.js  test-canonical-fix.js  test-redirects-curl.sh  test-redirects.js  test-seo-local.js  verify-all-canonicals.sh  verify-seo.js
src/: App.tsx  index.css
src/components/: ErrorBoundary.tsx  FAQ.tsx  JsonLDScript.tsx  MarkdownRenderer.tsx  PageTransition.tsx  QuickSearch.tsx  SEO.tsx  UpdateNotification.tsx
src/config/: version.ts
src/data/: blogPosts.ts  faq.ts  faqSchema.ts  news.ts
src/hooks/: useCopyToClipboard.ts  useRandomUniverseCipher.ts
src/pages/: About.tsx  BlogPost.tsx  Blogs.tsx  Downloads.tsx  FAQ.tsx  Index.tsx  Issues.tsx  News.tsx  NewsArticle.tsx  NotFound.tsx  SchoolProjects.tsx  Tools.tsx
wasm/: .gitignore  Cargo.toml  build.sh
wasm/src/: lib.rs
(+98 files in other folders)
